--- a/26a OData - CORS Fix/index.html
+++ b/26a OData - CORS Fix/index.html
@@ -2,16 +2,15 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SAPUI5 Walkthrough - Test Page</title>
+    <title>SAPUI5 Walkthrough</title>
     <script
       id="sap-ui-bootstrap"
       src="https://sdk.openui5.org/resources/sap-ui-core.js"
       data-sap-ui-theme="sap_belize"
       data-sap-ui-resourceroots='{
-			"sap.ui.demo.walkthrough": "../"
+			"sap.ui.demo.walkthrough": "./"
 		}'
-      data-sap-ui-oninit="module:sap/ui/demo/walkthrough/test/initMockServer"
+      data-sap-ui-oninit="module:sap/ui/core/ComponentSupport"
       data-sap-ui-compatVersion="edge"
       data-sap-ui-async="true"
     ></script>
